Fixed dark mode popup text color

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -54,7 +54,7 @@ body {
         }
 
         .vehicle-location {
-            color: var(--text-color);
+            color: var(--user-vehicles-popup-text-color);
         }
     }
 }
